--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <form id="survey-form" method="post" action="/submission.html">
+  <form id="survey-form" action="/submission.html">
     <label id="name-label" for="name">Name:
       <input required id="name" type="text" placeholder="Enter your name here" />
     </label>
