--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <link rel="stylesheet" href="style.css" />
   <title>Registration Form</title>
-  <h1 id="title" class="title">Developer Questionaire</h1>
+  <h1 id="title" class="title">Developer Questionnaire</h1>
 </head>
 
 <body>
